--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,5 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+HtmlToCsvStatements/output.csv
+HtmlToCsvStatements/Sample.html
